# studio

./: .env.mac.sample  .env.windows.sample  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dev-all.bat  dev-all.sh  dev.bat  dev.sh  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.nightly.yml  docker-compose.remote.yml  docker-compose.yml  setup-dev.bat  setup-dev.ps1  setup-dev.sh  start-nightly.bat  start-nightly.sh  start-remote.bat  start-remote.sh  start.bat  start.sh
models/midi/: .gitignore  Dockerfile  LICENSE  README.md  cloud_run.yaml  entrypoint.sh  generate.py  manage.py  modal_app.py  pretokenize.py  pyproject.toml  requirements.txt  start.sh  train.py
models/midi/README/: API.md  DEBUG.md  DIAGNOSTIC.md  GENERATION.md  HOW_IT_WORKS.md  MIDI_CHANNELS.md  QUANTIZE.md  TRAINING.md  TROUBLESHOOTING.md
models/midi/api/: __init__.py  apps.py  consumers.py  routing.py  serializers.py  services.py  tasks.py  urls.py  views.py
models/midi/configs/: 8x_a100.json  a100_40gb.json  a100_40gb_5k.json  debug_overfit.json  m4_max_128gb.json  rtx_pro_6000_5k.json
models/midi/midi/: __init__.py  diagnose.py  quantize.py  tokenizer.py
models/midi/midi_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
models/midi/scripts/: delete_bad_midi.sh  diagnose.py  fetch_genres.py  import_lastfm_tags.py  organize_lmd_by_genre.py  propagate_artist_tags.py  sample_by_genre.py
models/midi/tests/: __init__.py  conftest.py  test_autotune.py  test_cache.py  test_config.py  test_diagnose.py  test_kv_cache.py  (+4 more)
(+159 files in other folders)
