[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midi"
version = "0.1.0"
description = "MIDI music generation with transformers"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "miditok>=3.0.0",
    "tqdm>=4.65.0",
    "symusic>=0.4.0",
    "coremltools>=8.0",
]

[project.optional-dependencies]
audio = [
    "midi2audio>=0.1.1",
    "pydub>=0.25.1",
]
api = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "celery>=5.3",
    "redis>=5.0",
    "gunicorn>=21.2",
]
gcp = [
    "google-cloud-storage>=2.14",
]
modal = [
    "modal>=0.73",
    "google-cloud-storage>=2.14",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["midi*"]
